Bug 1737854 - macOS 'Share' menu modifies URL such that shared page doesn't load  r=necko-reviewers,mstange,valentin

Revert some of the fix for 1722758 so that only the URL ref component is re-encoded for NSURL compatibility. Other URL fields need additional work to be addressed in a follow up.

Update the set of characters re-encoded to be as minimal as possible and include missing characters.

Add tests to ensure encoding works as expected, not just that it is accepted by NSURL.

Differential Revision: https://phabricator.services.mozilla.com/D130445